[package]
name = "dtmf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
cpal = "0.13.5"
crypto = "0.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
realfft = "3.0.0"
regex = "1.5.6"
rodio = "0.15.0"
rustfft = "6.0.1"
shlex = "1.1.0"
time = "0.3.11"
yaml-rust = "0.4"
